--- a/openapi/corporate-hotel-api.yaml
+++ b/openapi/corporate-hotel-api.yaml
@@ -31,7 +31,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/BookingResponse' 
               example: 
-                bookingId: EUREKA
+                bookingId: EUREKA2
         "400":
           description: invalid input, object invalid
         "409":
