Create example with local stub server for the HTTP API

--- a/openapi/corporate-hotel-api.yaml
+++ b/openapi/corporate-hotel-api.yaml
@@ -11,6 +11,8 @@ info:
 servers:
 - url: https://virtserver.swaggerhub.com/islomar/CorporateHotelBooking/1.0.0
   description: SwaggerHub API Auto Mocking
+- url: http://127.0.0.1:8080/v1
+  description: Local Mocking
 paths:
   /booking:
     post:
@@ -31,7 +33,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/BookingResponse' 
               example: 
-                bookingId: EUREKA42
+                bookingId: f727fd25-864e-3a7b-9fbf-d2d852fdac1b
         "400":
           description: invalid input, object invalid
         "409":
@@ -40,11 +42,11 @@ paths:
 components:
   schemas:
     BookingRequest:
+      type: object
       required:
         - employeeId
         - hotelId
         - roomType
-      type: object
       properties:
         employeeId:
           type: string
@@ -64,6 +66,7 @@ components:
       properties:
         bookingId:
           type: string
-          example: EUREKA6
+          format: uuid
+          example: f727fd25-864e-3a7b-9fbf-d2d852fdac1b
       example:
-        bookingId: EUREKA6
+        bookingId: f727fd25-864e-3a7b-9fbf-d2d852fdac1b
