Postman updated Corporate Hotel Booking API Draft

--- a/openapi/corporate-hotel-api.yaml
+++ b/openapi/corporate-hotel-api.yaml
@@ -3,7 +3,7 @@ info:
   title: Corporate Hotel Booking API
   description: HTTP API for the Corporate Hotel Booking service
   contact:
-    email: islomar@gmail.es
+    email: islomar@gmail.com
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
